fixed nav icon files, no longer cutting off

--- a/web/attachments/static/attachments/css/styles.css
+++ b/web/attachments/static/attachments/css/styles.css
@@ -4,8 +4,8 @@
     float: left;
     width: 164px;
     margin: 20px;
-    background: #e3f1ea;
-/*    background: #e5f0ea url('../../../../static/img/bg-pagefold.png') no-repeat right bottom;*/
+/*    background: #e3f1ea;*/
+    background: #e5f0ea url('../../../../static/img/bg-pagefold.png') no-repeat right bottom;
     overflow: hidden;
 }
 
